一部コードの修正(trainからXへ)

--- a/notebooks/03_0624_notebook(未提出).ipynb
+++ b/notebooks/03_0624_notebook(未提出).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "id": "91c19de8",
    "metadata": {},
    "outputs": [],
@@ -38,45 +38,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "id": "5be99d03",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Id                  0\n",
-       "Year                0\n",
-       "School              0\n",
-       "Height              0\n",
-       "Weight              0\n",
-       "Sprint_40yd         0\n",
-       "Vertical_Jump       0\n",
-       "Bench_Press_Reps    0\n",
-       "Broad_Jump          0\n",
-       "Agility_3cone       0\n",
-       "Shuttle             0\n",
-       "Player_Type         0\n",
-       "Position_Type       0\n",
-       "Position            0\n",
-       "Drafted             0\n",
-       "Age_missing         0\n",
-       "Age_filled          0\n",
+       "Id                    0\n",
+       "Year                  0\n",
+       "Age                 435\n",
+       "School                0\n",
+       "Height                0\n",
+       "Weight                0\n",
+       "Sprint_40yd         145\n",
+       "Vertical_Jump       554\n",
+       "Bench_Press_Reps    721\n",
+       "Broad_Jump          581\n",
+       "Agility_3cone       970\n",
+       "Shuttle             912\n",
+       "Player_Type           0\n",
+       "Position_Type         0\n",
+       "Position              0\n",
+       "Drafted               0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.isnull().sum()"
+    "X.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 7,
    "id": "f11665e0",
    "metadata": {},
    "outputs": [
@@ -101,7 +100,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 8,
    "id": "da49f45d",
    "metadata": {},
    "outputs": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "id": "bc427f60",
    "metadata": {},
    "outputs": [],
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 10,
    "id": "2c628611",
    "metadata": {},
    "outputs": [],
@@ -272,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "id": "e9db1922",
    "metadata": {},
    "outputs": [],
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "id": "429d03f5",
    "metadata": {},
    "outputs": [],
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 13,
    "id": "88c2b72f",
    "metadata": {},
    "outputs": [
@@ -354,18 +353,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 14,
    "id": "8ffb39f5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "y = X[\"Drafted\"]\n",
     "X = X.drop(columns=[\"Drafted\"])\n",
-    "y = train[\"Drafted\"]\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "id": "deae524b",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "id": "68f20b18",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1445, number of negative: 779\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000107 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000886 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 916\n",
@@ -579,7 +579,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Fold 1 - Train AUC: 0.9435, Validation AUC: 0.8394\n",
       "[LightGBM] [Info] Number of positive: 1448, number of negative: 777\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000270 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000439 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 908\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -723,7 +723,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Fold 2 - Train AUC: 0.9449, Validation AUC: 0.8210\n",
       "[LightGBM] [Info] Number of positive: 1442, number of negative: 783\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000250 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000209 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 916\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -953,7 +953,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Fold 3 - Train AUC: 0.9433, Validation AUC: 0.8053\n",
       "[LightGBM] [Info] Number of positive: 1438, number of negative: 787\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000307 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000244 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 921\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -1114,7 +1114,7 @@
       "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
       "Fold 4 - Train AUC: 0.9449, Validation AUC: 0.8144\n",
       "[LightGBM] [Info] Number of positive: 1439, number of negative: 786\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000299 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000220 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 921\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 17,
    "id": "cdd77b00",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "id": "c7043bde",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 19,
    "id": "ffd5132d",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1402,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1445, number of negative: 779\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000479 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000274 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1171\n",
       "[LightGBM] [Info] Number of data points in the train set: 2224, number of used features: 16\n",
@@ -1764,7 +1764,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 1 - Train AUC: 0.9224, Validation AUC: 0.8418\n",
       "[LightGBM] [Info] Number of positive: 1448, number of negative: 777\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000251 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000233 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1163\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 16\n",
@@ -2141,7 +2141,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 2 - Train AUC: 0.9240, Validation AUC: 0.8280\n",
       "[LightGBM] [Info] Number of positive: 1442, number of negative: 783\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000251 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000243 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1171\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 16\n",
@@ -2517,7 +2517,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 3 - Train AUC: 0.9258, Validation AUC: 0.8070\n",
       "[LightGBM] [Info] Number of positive: 1438, number of negative: 787\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000280 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000265 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1176\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 16\n",
@@ -2879,7 +2879,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 4 - Train AUC: 0.9249, Validation AUC: 0.8132\n",
       "[LightGBM] [Info] Number of positive: 1439, number of negative: 786\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000296 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000250 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1176\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 16\n",
@@ -3392,7 +3392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 20,
    "id": "da32eae0",
    "metadata": {},
    "outputs": [
@@ -3434,7 +3434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "id": "1da79c0e",
    "metadata": {},
    "outputs": [],
@@ -3445,7 +3445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "id": "c7f28eec",
    "metadata": {},
    "outputs": [
@@ -3454,7 +3454,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1445, number of negative: 779\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000305 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000229 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1024\n",
       "[LightGBM] [Info] Number of data points in the train set: 2224, number of used features: 15\n",
@@ -3866,7 +3866,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 1 - Train AUC: 0.9130, Validation AUC: 0.8463\n",
       "[LightGBM] [Info] Number of positive: 1448, number of negative: 777\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000398 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000250 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1020\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -4261,7 +4261,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 2 - Train AUC: 0.9192, Validation AUC: 0.8277\n",
       "[LightGBM] [Info] Number of positive: 1442, number of negative: 783\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000230 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000306 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1025\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -4647,7 +4647,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 3 - Train AUC: 0.9229, Validation AUC: 0.8077\n",
       "[LightGBM] [Info] Number of positive: 1438, number of negative: 787\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000297 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000262 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1034\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -5107,7 +5107,7 @@
       "[LightGBM] [Warning] Stopped training because there are no more leaves that meet the split requirements\n",
       "Fold 4 - Train AUC: 0.9146, Validation AUC: 0.8107\n",
       "[LightGBM] [Info] Number of positive: 1439, number of negative: 786\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000207 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000251 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1027\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 15\n",
@@ -5653,7 +5653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 23,
    "id": "0bea893e",
    "metadata": {},
    "outputs": [
@@ -5687,7 +5687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 24,
    "id": "0c6d31d4",
    "metadata": {},
    "outputs": [],
