--- a/notebooks/00_baseline(0.80792).ipynb
+++ b/notebooks/00_baseline(0.80792).ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "AoDmmFne-gXm",
    "metadata": {
     "id": "AoDmmFne-gXm"
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "axieymX1-gXn",
    "metadata": {
     "id": "axieymX1-gXn"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "5iYKMqdHpoCM",
    "metadata": {
     "colab": {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "s5gcxJuW-gXn",
    "metadata": {
     "colab": {
@@ -353,7 +353,7 @@
        "4     offense    backs_receivers       WR      1.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "Y_N7ZQNd-gXn",
    "metadata": {
     "colab": {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "YpvBHxA3Fcmw",
    "metadata": {
     "colab": {
@@ -489,7 +489,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "dMggbhUhFerI",
    "metadata": {
     "colab": {
@@ -532,7 +532,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "_-5IY6vLGrlg",
    "metadata": {
     "colab": {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "ciccIjxZHdxc",
    "metadata": {
     "colab": {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "-3_Jpd9uMYng",
    "metadata": {
     "colab": {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "tPwYZuMHOCAl",
    "metadata": {
     "colab": {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "A2lITeWtQItv",
    "metadata": {
     "colab": {
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "0KmvlEVVum1A",
    "metadata": {
     "colab": {
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "-16g0_2TO4w8",
    "metadata": {
     "colab": {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "SadTmPB5-gXp",
    "metadata": {
     "colab": {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "HAPvFxh1TwPy",
    "metadata": {
     "id": "HAPvFxh1TwPy"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "id": "NqokTzPfUXsi",
    "metadata": {
     "id": "NqokTzPfUXsi"
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "Jde8jvrQUuoc",
    "metadata": {
     "colab": {
@@ -1124,7 +1124,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "id": "sRyuvT7bUv0p",
    "metadata": {
     "colab": {
@@ -1165,7 +1165,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "KLTs1X2D-gXp",
    "metadata": {
     "id": "KLTs1X2D-gXp"
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "id": "fVrrEQmy-gXp",
    "metadata": {
     "colab": {
@@ -1377,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "cfXMqJ1ygSCK",
    "metadata": {
     "id": "cfXMqJ1ygSCK"
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "bn1PBKPpQjVC",
    "metadata": {
     "colab": {
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "ZDQH5AKZRsRR",
    "metadata": {
     "colab": {
@@ -1566,12 +1566,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "pYNBKyCDTLuD",
    "metadata": {
     "id": "pYNBKyCDTLuD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_pred_proba_mean' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# このセルを実行すると提出用のCSVファイルが作成されます\u001b[39;00m\n\u001b[32m      2\u001b[39m submission = pd.read_csv(PATH + \u001b[33m'\u001b[39m\u001b[33msample_submission.csv\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;66;03m# PATHは必要に応じて変更の必要があります\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m submission[\u001b[33m\"\u001b[39m\u001b[33mDrafted\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mtest_pred_proba_mean\u001b[49m\n\u001b[32m      4\u001b[39m submission.to_csv(PATH + \u001b[33m'\u001b[39m\u001b[33mbaseline_submission.csv\u001b[39m\u001b[33m'\u001b[39m, index=\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'test_pred_proba_mean' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# このセルを実行すると提出用のCSVファイルが作成されます\n",
     "submission = pd.read_csv(PATH + 'sample_submission.csv') # PATHは必要に応じて変更の必要があります\n",
@@ -1622,9 +1634,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6615d39",
+   "id": "82fc59b3",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 特徴量の絞り方\n",
+    "\n",
+    "## 1️⃣ 特徴量を絞る目的\n",
+    "過学習抑制・汎化性能向上\n",
+    "\n",
+    "学習・推論速度向上\n",
+    "\n",
+    "モデル解釈性向上\n",
+    "\n",
+    "ノイズ除去\n",
+    "\n",
+    "## 2️⃣ 上位勢が用いる具体的手法\n",
+    "\n",
+    "### (1) 特徴量重要度 (Feature Importance) に基づく削除\n",
+    "LightGBM, XGBoost の feature_importance で低いものを候補に\n",
+    "\n",
+    "SHAP値（平均絶対値）で低いものを削除候補に\n",
+    "\n",
+    "ただし単純に削除せず、削除前後でスコア変化を必ず確認\n",
+    "\n",
+    "### (2) 欠損率・ユニーク数ベースのフィルタ\n",
+    "欠損率が高すぎる特徴量（>90%など）は削除候補\n",
+    "\n",
+    "ほぼ定数の特徴量（ユニーク数が1, 2など）を削除\n",
+    "\n",
+    "カテゴリ変数の中で rare category 過多なものは削除・統合\n",
+    "\n",
+    "### (3) 相関行列・VIFによる多重共線性チェック\n",
+    "0.95以上の相関を持つペアは一方を削除候補にする\n",
+    "\n",
+    "VIF (Variance Inflation Factor) で高すぎる特徴量を削除\n",
+    "\n",
+    "Kaggleでは計算負荷から「相関行列ベースのみ」で行う場合が多い\n",
+    "\n",
+    "### (4) Permutation Importance による評価\n",
+    "学習後に特徴量ごとにシャッフルしスコア低下度を確認\n",
+    "\n",
+    "低下が小さい特徴量は削除候補\n",
+    "\n",
+    "### (5) モデル・Fold・ランダムシードを変えて削除テスト\n",
+    "モデルによる評価の偏りを防ぐため複数モデル（LGBM, NNなど）で確認\n",
+    "\n",
+    "異なるFold/Seedで削除後の汎化性能への影響を確認\n",
+    "\n",
+    "### (6) ドメイン知識・EDAに基づく削除\n",
+    "明らかにリークしている特徴量の削除\n",
+    "\n",
+    "ターゲットと無関係な特徴量を削除（例：NFLコンバインでPlayer_Nameなど）\n",
+    "\n",
+    "### (7) 特徴量追加と削除をセットで試す\n",
+    "削除だけでなく新特徴量を追加しスコア変化を見る\n",
+    "\n",
+    "相互作用特徴量が有効であれば、元特徴量の削除でも性能維持可能\n",
+    "\n",
+    "## 3️⃣ 上位勢の実務的ポイント\n",
+    "### ✅ 一気に削除せず1つずつ削除してスコア確認（forward/backward selection的運用）\n",
+    "\n",
+    "### ✅ \"削除できるものはすべて削除する\" というより \"削除しても性能が落ちないものを削除する\"\n",
+    "\n",
+    "### ✅ Kaggleコンペ特有のテクニック\n",
+    "\n",
+    "Public vs Privateスコア差の分析を活用し、不安定な特徴量の特定\n",
+    "\n",
+    "Time Consistency Test（過去年度のtrain, test分割で削除テスト）で将来適用可能性を確認\n",
+    "\n",
+    "## 4️⃣ 具体例（NFL Draft Predictionコンペ）\n",
+    "例えば：\n",
+    "\n",
+    "欠損率80%以上の体重・身長・一部種目スコアを削除候補に\n",
+    "\n",
+    "同じ情報を含む複数カラム（Speed Score, Forty Yard Dash）で重要度の低い方を削除\n",
+    "\n",
+    "PositionのTarget Encoding後に元カテゴリを削除するか検討\n",
+    "\n",
+    "SHAPで影響度が低い特徴量を削除しAUCが下がらないかFold別に確認\n",
+    "\n",
+    "✅ 結論\n",
+    "\n",
+    "Kaggle上位勢は\n",
+    "\n",
+    "「Feature Importance・SHAP・欠損・相関・EDA・Fold検証」など複数手法を組み合わせ、削除の可否をスコアで厳密に確認しながら特徴量を絞り込み、汎化性能を高める\n",
+    "\n",
+    "という戦略を一貫して取っています。\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
