カーネル変更

--- a/notebooks/09_0627_notebook(0.84205).ipynb
+++ b/notebooks/09_0627_notebook(0.84205).ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "de6cf3f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "#テンプレート\n",
     "\n",
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "23f0d92c",
    "metadata": {},
    "outputs": [],
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "id": "92143dd6",
    "metadata": {},
    "outputs": [],
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "16cf1136",
    "metadata": {},
    "outputs": [],
@@ -94,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "id": "c3aabfeb",
    "metadata": {},
    "outputs": [
@@ -102,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\81807\\AppData\\Local\\Temp\\ipykernel_19580\\3887577351.py:42: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[0.6        0.2739726  0.65632458 0.7109375  0.62895928 0.62895928\n",
+      "C:\\Users\\81807\\AppData\\Local\\Temp\\ipykernel_18080\\3887577351.py:42: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '[0.6        0.2739726  0.65632458 0.7109375  0.62895928 0.62895928\n",
       " 0.65632458 0.62895928 0.7109375  0.71884984 0.6        0.65632458\n",
       " 0.65632458 0.71884984 0.62895928 0.62895928 0.65632458 0.71884984\n",
       " 0.62895928 0.65632458 0.65632458 0.62895928 0.62895928 0.65632458\n",
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "id": "1e7b6751",
    "metadata": {},
    "outputs": [],
@@ -305,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "id": "3dee1e99",
    "metadata": {},
    "outputs": [
@@ -335,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "id": "b1231e6c",
    "metadata": {},
    "outputs": [],
@@ -351,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "id": "dbc95060",
    "metadata": {},
    "outputs": [],
@@ -378,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 10,
    "id": "acd7dda6",
    "metadata": {},
    "outputs": [
@@ -387,8 +396,9 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1445, number of negative: 779\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000139 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000717 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 1047\n",
       "[LightGBM] [Info] Number of data points in the train set: 2224, number of used features: 13\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.649730 -> initscore=0.617854\n",
@@ -594,7 +604,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1448, number of negative: 777\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000169 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000236 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1042\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 13\n",
@@ -705,7 +715,7 @@
       "[80]\tvalid_0's auc: 0.837902\tvalid_0's binary_logloss: 0.451886\n",
       "✅ Fold 2 - Train AUC: 0.8694, Validation AUC: 0.8379\n",
       "[LightGBM] [Info] Number of positive: 1442, number of negative: 783\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000180 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000250 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1046\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 13\n",
@@ -795,7 +805,7 @@
       "[60]\tvalid_0's auc: 0.813531\tvalid_0's binary_logloss: 0.476393\n",
       "✅ Fold 3 - Train AUC: 0.8675, Validation AUC: 0.8135\n",
       "[LightGBM] [Info] Number of positive: 1438, number of negative: 787\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000214 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000248 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1051\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 13\n",
@@ -1015,7 +1025,7 @@
       "[326]\tvalid_0's auc: 0.818791\tvalid_0's binary_logloss: 0.441679\n",
       "✅ Fold 4 - Train AUC: 0.8982, Validation AUC: 0.8188\n",
       "[LightGBM] [Info] Number of positive: 1439, number of negative: 786\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000209 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000260 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 1049\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 13\n",
@@ -1191,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 11,
    "id": "b108635b",
    "metadata": {},
    "outputs": [
@@ -1218,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "id": "a189c4f1",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "id": "14ac3c8f",
    "metadata": {},
    "outputs": [],
@@ -1302,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "id": "ff4aa237",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "id": "c4e2a06c",
    "metadata": {},
    "outputs": [
@@ -1325,9 +1335,8 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 1445, number of negative: 779\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.002869 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000687 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2731\n",
       "[LightGBM] [Info] Number of data points in the train set: 2224, number of used features: 27\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.649730 -> initscore=0.617854\n",
@@ -1394,7 +1403,7 @@
       "[234]\tvalid_0's auc: 0.862413\tvalid_0's binary_logloss: 0.40821\n",
       "✅ Fold 1 - Train AUC: 0.9000, Validation AUC: 0.8624\n",
       "[LightGBM] [Info] Number of positive: 1448, number of negative: 777\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000593 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000495 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2730\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 27\n",
@@ -1449,7 +1458,7 @@
       "[220]\tvalid_0's auc: 0.845729\tvalid_0's binary_logloss: 0.42806\n",
       "✅ Fold 2 - Train AUC: 0.9035, Validation AUC: 0.8457\n",
       "[LightGBM] [Info] Number of positive: 1442, number of negative: 783\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000867 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000395 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2743\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 27\n",
@@ -1460,7 +1469,7 @@
       "[19]\tvalid_0's auc: 0.812522\tvalid_0's binary_logloss: 0.514675\n",
       "✅ Fold 3 - Train AUC: 0.8587, Validation AUC: 0.8125\n",
       "[LightGBM] [Info] Number of positive: 1438, number of negative: 787\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000964 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000502 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2752\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 27\n",
@@ -1479,7 +1488,7 @@
       "[229]\tvalid_0's auc: 0.811934\tvalid_0's binary_logloss: 0.448468\n",
       "✅ Fold 4 - Train AUC: 0.9067, Validation AUC: 0.8119\n",
       "[LightGBM] [Info] Number of positive: 1439, number of negative: 786\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000461 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000442 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 2742\n",
       "[LightGBM] [Info] Number of data points in the train set: 2225, number of used features: 27\n",
@@ -1562,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "id": "8eef871a",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1607,7 @@
     "# 提出用DataFrameを作成\n",
     "submission = pd.DataFrame({\n",
     "    \"Id\": original_test[\"Id\"],\n",
-    "    \"Drafted\": y_pred\n",
+    "    \"Drafted\": 1 - y_pred  # ← これだけ変更\n",
     "})\n",
     "\n",
     "# 保存ディレクトリをプロジェクトルートに作成\n",
@@ -1636,7 +1645,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
