--- a/notebooks/14_0703_notebook(0.80714).ipynb
+++ b/notebooks/14_0703_notebook(0.80714).ipynb
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 123,
    "id": "146be040",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
     "# 提出用DataFrameを作成\n",
     "submission = pd.DataFrame({\n",
     "    \"Id\": original_test[\"Id\"],\n",
-    "    \"Drafted\": 1 - y_pred  # ← これだけ変更\n",
+    "    \"Drafted\":  y_pred  # ← これだけ変更\n",
     "})\n",
     "\n",
     "# 保存ディレクトリをプロジェクトルートに作成\n",
