--- a/notebooks/16_0703_notebook().ipynb
+++ b/notebooks/16_0703_notebook().ipynb
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "c325c303",
    "metadata": {},
    "outputs": [
@@ -1057,6 +1057,17 @@
      "output_type": "stream",
      "text": [
       "✅ 提出ファイルを保存しました: c:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\submissions\\submission_16_0703.csv\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m現在のセルまたは前のセルでコードを実行中に、カーネル (Kernel) がクラッシュしました。\n",
+      "\u001b[1;31mエラーの原因を特定するには、セル内のコードを確認してください。\n",
+      "\u001b[1;31m詳細については<a href='https://aka.ms/vscodeJupyterKernelCrash'>こちら</a>をクリックします。\n",
+      "\u001b[1;31m詳細については、Jupyter <a href='command:jupyter.viewOutput'>ログ</a> を参照してください。"
      ]
     }
    ],
