21_0705モデルの作成

--- a/notebooks/csv_test.ipynb
+++ b/notebooks/csv_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9d1400c0",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 収集済ファイル数: 11\n",
-      "✅ 最も近いファイル: C:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\submissions\\submission_09_0627(0.84205).csv\n",
-      "✅ 推定スコア: 0.84205\n",
+      "✅ 収集済ファイル数: 15\n",
+      "✅ 最も近いファイル: C:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\submissions\\submission_10_0628(0.83668).csv\n",
+      "✅ 推定スコア: 0.83668\n",
       "\n",
       "✅ 類似度上位5件:\n",
-      "submission_09_0627(0.84205).csv | Score: 0.84205 | L1距離: 4.29531\n",
-      "submission_20250627_0055(0.82769).csv | Score: 0.82769 | L1距離: 5.85941\n",
-      "submission_08_0627(0.83414).csv | Score: 0.83414 | L1距離: 5.90423\n",
-      "submission_10_0628(0.83668).csv | Score: 0.83668 | L1距離: 8.79009\n",
-      "submission_20250626_1401(0.82787).csv | Score: 0.82787 | L1距離: 8.93822\n"
+      "submission_10_0628(0.83668).csv | Score: 0.83668 | L1距離: 9.14394\n",
+      "submission_08_0627(0.83414).csv | Score: 0.83414 | L1距離: 10.89482\n",
+      "submission_18_0705(0.84272).csv | Score: 0.84272 | L1距離: 12.30194\n",
+      "submission_06_0627(0.82752).csv | Score: 0.82752 | L1距離: 12.34326\n",
+      "submission_17_0704(0.84169).csv | Score: 0.84169 | L1距離: 12.95179\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
     "print(f\"✅ 収集済ファイル数: {len(vectors)}\")\n",
     "\n",
     "# ❸ 新規提出ファイルのスコア推定\n",
-    "new_file = r\"C:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\submissions\\submission_16_0703.csv\"\n",
+    "new_file = r\"C:\\Users\\81807\\Desktop\\Kaggle\\GCI②(NFL Draft Prediction)\\submissions\\submission_20_0705().csv\"\n",
     "df_new = pd.read_csv(new_file)\n",
     "new_vec = np.sort(df_new[\"Drafted\"].values)\n",
     "\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "ebb94572",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ 09モデルとのL1距離: 4.29531\n"
+      "✅ 09モデルとのL1距離: 16.76278\n"
      ]
     }
    ],
